hphp/test/slow/reified_generics/error-erased-generic-cls-1.php.expectf
Fatal error: Class C expects a reified generic at index 2 in %s on line 6
